src/test/custom/valid/jump/switchBreak.wacc
# a simple switch statement with several break statement

# Output:
# Correct!

# Program:

begin
  int i = 2;
  switch i do
    case 0
      print "This is 0";
      break
    case 1
      print "This is 1";
      break
    case 2
      print "Correct!";
      break
    default
      print "This line should not be printed"
  done
end