src/test/custom/invalid/switch/switchWithoutDefault.wacc
# switch statement without a default branch

# Output:
# #syntax error#

# Program:

begin
  int i = 0;
  switch i do
    case 0
      println "haha";
      continue
    default
      println "default";
  done
end